# trit-core

./: .dockerignore  .gitignore  AUDIT_REPORT.md  AUDIT_REPORT_2026-07-06.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  SECURITY_AUDIT_2026-06-30.md  SESSION_START.md  adversarial_audit_report.json  deny.toml  docker-compose.yml  package-lock.json  package.json  tarpaulin-report.html  tarpaulin.toml  圆桌会议.md  审计2023.6.19.md  开悟.md  自审计.md
.github/: PULL_REQUEST_TEMPLATE.md
api/: public-api.txt
aurora/: AURORA_DOC_REVIEW_PRINCIPLES.md  AURORA_TECHNICAL_AUDIT_v1.md  Cargo.toml  INDEX.md  MASTER_PLAN.md
aurora/00_manifest/: AURORA_MANIFEST.md  CHARTER.md  COGNITIVE_ARCHITECTURE_LAYERS.md  FIRST_PRINCIPLES.md  LOCAL_MODEL_ETHICS_SPEC.md
aurora/01_insights/: 100MS_HIJACK_MODEL.md  ATTENTION_CAPITALISM.md  COGNITIVE_SOVEREIGNTY.md  ENVIRONMENTAL_SHOCK.md  FRAME_EPISTEMOLOGY.md  NEURAL_REWIRING_PROTOCOL.md  ORGANIZATIONAL_VORTEX.md
aurora/02_math/: ATTENTION_DYNAMICS.md  FIELD_EQUATIONS.md  INFORMATION_THEORY.md  PHASE_ARITHMETIC.md  WAVELET_ANALYSIS.md
aurora/03_methodology/: N_OF_1_PROTOCOL.md
aurora/03_whitepaper/: API_CONTRACT.md  ARCHITECTURE.md  EXECUTIVE_SUMMARY.md  PROTOCOL_SPEC.md  SECURITY_MODEL.md
aurora/04_engineering/: DATA_MODEL.md  DEPLOYMENT_GUIDE.md  PIPELINE_DESIGN.md  SYSTEM_DESIGN.md  TECH_REVIEW_CHECKLIST.md  TESTING_STRATEGY.md
aurora/05_adr/: 001-local-first.md  002-wavelet-over-fft.md  003-ternary-over-binary.md  004-geoeco-frame.md  005-rust-over-python.md  006-tauri-over-electron.md  007-sqlite-over-postgres.md  008-subscription-over-ads.md  009-ethics-hardening.md
aurora/06_roadmap/: CTO_ROADMAP.md  M1_EXIT_CRITERIA.md  M2_EXIT_CRITERIA.md  M3_EXIT_CRITERIA.md  M4_EXIT_CRITERIA.md  MILESTONES.md  MVP_EXIT_CRITERIA.md
aurora/07_specs/: ALERT_ENGINE_SPEC.md  DATA_INGESTION_SPEC.md  FRAME_MODEL_SPEC.md  TRIT_CORE_INTEGRATION_SPEC.md  UI_SPEC.md  WAVELET_ENGINE_SPEC.md
aurora/08_reports/: AURORA_DOC_AUDIT_v2.md  DAO_SCIENCE_IMPORT_ASSESSMENT.md  PERFORMANCE_REPORT_TEMPLATE.md  RETROSPECTIVE_TEMPLATE.md  SECURITY_AUDIT_TEMPLATE.md  VALIDATION_REPORT_TEMPLATE.md
aurora/benches/: aurora_bench.rs
aurora/examples/: synthetic_2hz.json
aurora/src/: app.rs  cli.rs  lib.rs  main.rs  pipeline.rs
aurora/src/attention/: mod.rs
aurora/src/bc/: attention_guidance.rs  audit_trail.rs  mod.rs  presentation.rs  relationship_annotation.rs  signal_analysis.rs  ternary_decision.rs
aurora/src/config/: dpapi.rs  mod.rs  store.rs
aurora/src/db/: annotation_store.rs  audit_log.rs  aurora_dir.rs  migrate.rs  mod.rs  schema.rs
aurora/src/decision/: adapter.rs  conflict.rs  mod.rs
aurora/src/ingest/: json_fallback.rs  mail_abstract.rs  mod.rs
aurora/src/percept/: chain.rs  cloud.rs  error.rs  fft.rs  local.rs  mod.rs  openai_format.rs  prism.rs  retrospective.rs  types.rs
aurora/src/percept/prompts/: percept_system.txt
aurora/src/pipeline/: analysis.rs  attention.rs  mod.rs
aurora/src/render/: html.rs  json.rs  mod.rs
aurora/src/wavelet/: detect.rs  mod.rs  synthetic.rs
aurora/tests/: attention_session.rs  cli_end_to_end.rs  cloud_llm_tests.rs  config_store_tests.rs  decision_conflict.rs  ethics_gate_tests.rs  ethics_gates.rs  fft_provider_tests.rs  ingest_json.rs  local_llm_tests.rs  percept_chain_tests.rs  pipeline_percept_integration_tests.rs  render_attention.rs  smoke.rs  wavelet_detect.rs
aurora/tests/fixtures/: llm_imperative_response.json  llm_value_conflict_response.json
benches/: trit_bench.rs
datacore/: Cargo.toml  README.md
datacore/src/: anomaly.rs  lib.rs  normalize.rs  pipeline.rs  timeseries.rs
datacore/tests/: pipeline_integration.rs
dataforge/: Cargo.toml
dataforge/src/: cache.rs  error.rs  lib.rs  registry.rs  source.rs  types.rs
dataforge/src/sources/: arxiv.rs  gbif.rs  gibs.rs  mod.rs  nasa_power.rs  noaa_co2.rs  noaa_tides.rs  nsidc.rs  open_meteo.rs  ucdp.rs  usgs.rs
dataforge/tests/: integration_test.rs
docs/: INDEX.md  NARRATIVE_CHARTER.md  REVIEWER_GUIDE.md  api.md  code-quality-audit.md  performance-audit.md  performance-validation.md  preprint.md  roadmap.md  security-audit.md  technical-whitepaper.md  validation-report.md  whitepaper.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: scenario_json.rs  tritword_construct.rs
map/: 00_START_HERE.md  01_manifest.md  02_concepts.md  03_adr.md  04_math.md  05_engineering.md  06_code.md  07_insights.md  99_tag_index.md  高杠杆.md
scenarios/: adversarial_01_phase_drift_accumulation.json  adversarial_02_silent_phase_capture.json  adversarial_03_firstperson_override_of_safety.json  adversarial_04_unknown_infiltration.json  adversarial_05_custom_domain_escape.json  adversarial_06_embodied_relational_collision.json  adversarial_07_false_negative_safe_fallback.json  adversarial_08_value_judgment_bypass.json  adversarial_09_absolute_frame_contamination.json  adversarial_10_medical_ethics_coercion.json  adversarial_11_phase_boundary_precision.json  adversarial_12_general_domain_majority_illusion.json  adversarial_audit.json  bridge_safety.json  bridge_safety.zh.json  career_value_conflict.json  career_value_conflict.zh.json  career_value_conflict_02.json  career_value_conflict_02.zh.json  career_value_conflict_03.json  career_value_conflict_03.zh.json  cognitive_embodied_dissonance.json  engineering_bridge_retrofit.json  engineering_bridge_retrofit.zh.json  engineering_dam_breach_risk.json  engineering_dam_breach_risk.zh.json  engineering_evacuation_consensus.json  engineering_evacuation_consensus.zh.json  engineering_material_tradeoff.json  engineering_material_tradeoff.zh.json  environmental_wetland_development.json  first_person_attention.json  general_conceptual_spin.json  (+24 more)
src/: clock.rs  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: asset_fetcher.rs  commands.rs  data_dir.rs  l1_cache.rs  l2_cache.rs  lib.rs  logger.rs  main.rs  mirror_fetcher.rs  proxy_server.rs  tile_downloader.rs  tile_sources.rs  utils.rs
src-tauri/src/data_sources/: climate.rs  mod.rs  ucdp.rs
(+264 files in other folders)
