[package]
name = "trit-core"
version = "0.1.0"
edition = "2021"
authors = ["Trit-Core Team"]
description = "A ternary decision engine for conflict-aware AI alignment"
license = "MIT"
repository = "https://github.com/trit-core/trit-core"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[dev-dependencies]
assert_fs = "1.0"
predicates = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"

[lib]
name = "trit_core"
path = "src/lib.rs"

[[bin]]
name = "trit-sandbox"
path = "src/bin/sandbox.rs"

[[bin]]
name = "trit-node"
path = "src/bin/node.rs"

[[bench]]
name = "trit_bench"
harness = false

[profile.release]
opt-level = 3
lto = true

[profile.bench]
opt-level = 3
