[package]
name = "aurora"
version = "0.1.0"
edition = "2021"
authors = ["Ultima0369"]
description = "Aurora: a local-first cognitive sovereignty tool built on Trit-Core"
license = "MIT"
repository = "https://github.com/trit-core/trit-core"
readme = "INDEX.md"

[dependencies]
truncore = { path = "..", package = "trit-core" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
rustfft = "6.2"
num-complex = "0.4"
thiserror = "1.0"

plotters = "0.3"

# SQLite with encryption (SQLCipher) for local data storage.
# M0: not yet used at runtime; M1: data layer backed by SQLite.
rusqlite = { version = "0.31", features = ["bundled"] }

# NOTE: bundled-sqlcipher feature will be enabled in M1 when encryption is activated.
# For now, use plain SQLite for development. The schema is identical.

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"

[[bin]]
name = "aurora"
path = "src/main.rs"

[[bench]]
name = "aurora_bench"
harness = false
