[package]
name = "aurora"
version = "0.1.0"
edition = "2021"
authors = ["Ultima0369"]
description = "Aurora: a local-first cognitive sovereignty tool built on Trit-Core"
license = "MIT"
repository = "https://github.com/trit-core/trit-core"
readme = "INDEX.md"

[dependencies]
truncore = { path = "..", package = "trit-core" }
dataforge = { path = "../dataforge" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
rustfft = "6.2"
num-complex = "0.4"
thiserror = "1.0"

# M2: HTTP client for cloud/local LLM providers (Windows native TLS)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# M2: async runtime for blocking on LLM HTTP calls
tokio = { version = "1", features = ["rt"] }

# SQLite with encryption (SQLCipher) for local data storage.
# M0: not yet used at runtime; M1: data layer backed by SQLite.
rusqlite = { version = "0.31", features = ["bundled"] }

# NOTE: bundled-sqlcipher feature will be enabled in M1 when encryption is activated.
# For now, use plain SQLite for development. The schema is identical.

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Security_Cryptography", "Win32_Foundation"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"

# M2: HTTP mocking for cloud LLM provider tests
wiremock = "0.6"
# M2: unique temp dirs for config tests
uuid = { version = "1.0", features = ["v4"] }

[[bin]]
name = "aurora"
path = "src/main.rs"

[[bench]]
name = "aurora_bench"
harness = false
