[package]
name = "datacore"
version = "0.1.0"
edition = "2021"
authors = ["Ultima0369"]
description = "Data pipeline between acquisition and perception — normalization, storage, anomaly detection."
license = "MIT"
repository = "https://github.com/trit-core/trit-core"
readme = "README.md"

[dependencies]
dataforge = { path = "../dataforge" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
dirs = "5"

[[bin]]
name = "datacore-collect"
path = "src/bin/collect.rs"
