[package]
name = "trit-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1.0"

[dependencies.trit-core]
path = ".."

[[bin]]
name = "scenario_json"
path = "fuzz_targets/scenario_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tritword_construct"
path = "fuzz_targets/tritword_construct.rs"
test = false
doc = false
bench = false
